APIs/googleapis.com/dfareporting/v3.3/java-client/docs/MobileApp.md


# MobileApp

Contains information about a mobile app. Used as a landing page deep link.

## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**directory** | [**DirectoryEnum**](#DirectoryEnum) | Mobile app directory. |  [optional] |
|**id** | **String** | ID of this mobile app. |  [optional] |
|**kind** | **String** | Identifies what kind of resource this is. Value: the fixed string \&quot;dfareporting#mobileApp\&quot;. |  [optional] |
|**publisherName** | **String** | Publisher name. |  [optional] |
|**title** | **String** | Title of this mobile app. |  [optional] |



## Enum: DirectoryEnum

| Name | Value |
|---- | -----|
| UNKNOWN | &quot;UNKNOWN&quot; |
| APPLE_APP_STORE | &quot;APPLE_APP_STORE&quot; |
| GOOGLE_PLAY_STORE | &quot;GOOGLE_PLAY_STORE&quot; |



